interfaces/Config/templates/staticcfg/css/style.css
/* ... */
@keyframes dot {
    0% { opacity: 0; }
    50% { opacity: 0; }
    100% { opacity: 1; }
}

.spin-glyphicon {
    animation: spin 2s infinite linear;
}

@keyframes spin {
  0% { transform: rotate(0deg); }
  100% { transform: rotate(359deg); }
}

@media screen and (min-width: 1200px) { 
    .Categories input[name="dir"] {
        max-width: 240px !important;
    }
}

@media screen and (min-width: 768px) and (max-width: 1200px) { 
    .navbar-default .navbar-nav>li>a>span,
    .navbar-default .navbar-nav>li>a:hover>strong,
    .navbar-default .navbar-nav>li>a.active>strong {
        display: inline;   
    }
    
    .navbar-default .navbar-nav>li>a>svg {
        display: inline-block;
    }
    
    .navbar-default .navbar-nav>li>a>strong,
    .navbar-default .navbar-nav:hover>li>a.active>strong {
        display: none;
    }
        
    .RSS #content,
    .Categories #content {
        width: 100%;
    }
}

@media screen and (max-width: 1000px) {
    .col1 {
        float: right;
        padding: 5px 0px;
    }
    
    .col1 h5 {
        margin-left: 20px;
    }
    
    .col2 {
        width: 100%;
        padding: 10px;
    }
    
    .col2 p {
        margin-left:  20px;
    }
        
    .Servers .col2 button:first-of-type {
        margin-bottom: 0;
    }
}

@media screen and (max-width: 768px) {
    .navbar-default .navbar-brand-small {
        display: none;
    }
    .navbar .container {
        padding-right: 15px;
    }
    .navbar-default .navbar-brand-mobile {
        display: block;
    }
    .navbar-collapse.in .navbar-nav>li>a>span,
    .navbar-collapse.collapsing .navbar-nav>li>a>span {
        display: inline-block;  
        width: 1.5em; 
    }
    
    .navbar-collapse.in .navbar-nav>li>a>svg,
    .navbar-collapse.collapsing .navbar-nav>li>a>svg {
        display: inline-block;
        margin-right: 0.5em;
    }
    
    .section .col2 h3 {
        padding-right: 25px;
    }
    
    .section .col2 h3 a {
        display: inline-block;
    }
    
    .main-restarting.in strong {
        font-size: 2em;
        font-weight: bold;
    }
    
    .main-restarting.in span {
        top: 2px;
    }
    
    .main-restarting.in small {
        font-size: 2rem !important;
    }

    #content {
        margin: 0 !important;
        padding: 0 !important;
        padding-top: 55px !important;
    }
    
    #content fieldset {
        min-width: 0;
        padding: 0 !important;
    }
    
    .colmask {
        border: none !important;
    }
    
    .col2 {
        padding: 10px;
    }
    
    .col2 h3 {
        margin: -10px -10px 0px;
        padding-left: 10px;
    }
    
    .col2 p {
        margin-left:  0px;
        margin-bottom: 0;
    }
    
    .col1 h5 {
        margin-left:  0px;
    }        
    
    label.config {
        margin-left: 0px;
        margin-bottom: 2px;
        width: 100%;
        float: none;
    }
    
    .desc {
        margin: 0;
        margin-left: 3px;
        margin-top: 2px;
        padding: 0 !important;
    }
    
    .col1 input[type="checkbox"] {
        position: inherit;
        float: left;
        margin-right: 5px;
        margin-top: 0px;
    }
    
    div.field-pair{
        min-width: 0;
        padding: 5px 10px;
    }

    .fileBrowserField {
        max-width: 65% !important;
    } 
    
    ul.tabs a {
        padding-left: 5px;
        padding-right: 5px;
    }
}

